--- a/VNT_Alerta/BaseForm.resx
+++ b/VNT_Alerta/BaseForm.resx
@@ -118,6 +118,14 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnPesquisar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAAHhJREFUOE/NkVEOwCAIQz2aH9xrR9vRHCVlHwPRZD++hMSOFolr5yIiXevWGiyc
+        O9s1MH4D2bcUGgdloOoZarhQlIFV3w3TNXcH/NrAHosygB48lDlqsN9G+cLwdLjhJhYG2cp+pi1HDeEG
+        husgyMLbaLB8uJNp7QGjGkb9T1fnpAAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="bntEditar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
